<resources>
    <string name="app_name">Financial Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_my_invoices">My Invoices</string>
    <string name="action_add_invoice">Add Invoice</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_add_invoice">AddInvoiceActivity</string>
    <string name="edit_invoice_name">Invoice Name</string>
    <string name="edit_invoice_number">Invoice Number</string>
    <string name="expiry_year">Year</string>
    <string name="edit_balance">Balance</string>
    <string name="button_save">Save</string>
    <string name="edit_card_number">Card Number</string>
    <string name="title_activity_invoice_details">InvoiceDetailsActivity</string>
    <string name="text_expiry_date">Expiry Date: </string>
    <string name="label_balance">Balance: </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_invoice_bank">Bank</string>
    <string name="edit_invoice">Edit Invoice</string>
    <string name="name">Name: </string>
    <string name="label_invoice_number">Invoice: </string>
    <string name="label_bank">Bank:</string>
    <string name="label_card_type">Card Type:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_use_default_currency">Use default currency</string>
    <string name="pref_default_currency">Set default currency</string>
    <string name="no_invoices">There are no invoices to show</string>
    <string name="edit_fund_name">Fund Name</string>
    <string name="edit_fund_value">Fund Value</string>
    <string name="edit_fund_bank">Bank</string>
    <string name="date_to">Date to:</string>
    <string name="edit_fund_monthly_tax">Monthly Tax</string>
    <string name="edit_fund_interest">Interest</string>
    <string name="edit_fund_value_after">Value After</string>
    <string name="edit_share_name">Share Name</string>
    <string name="edit_share_quantity">Quantity</string>
    <string name="edit_share_value">Share Value(All)</string>
    <string name="edit_share_company">Company</string>
    <string name="date_bought">Date Bought</string>
    <string name="edit_share_per_one">Value per Share</string>
    <string name="label_date_due">Date due:</string>
    <string name="label_value">Value:</string>
    <string name="title_activity_fund_details">FundDetailsActivity</string>
    <string name="btn_choose_date">Choose Date</string>
    <string name="label_monthly_tax">Monthly Tax:</string>
    <string name="label_fund_interest">Interest:</string>
    <string name="label_fund_value_after">Value after:</string>
    <string name="title_activity_fund_list">FundListActivity</string>
    <string name="title_activity_share_list">ShareListActivity</string>
    <string name="action_add_fund">Add Fund</string>
    <string name="title_activity_share_details">ShareDetailsActivity</string>
    <string name="label_per_share_value">Value per Share:</string>
    <string name="label_share_quantity">Quantity:</string>
    <string name="label_share_company">Company:</string>
    <string name="label_share_date_bought">Bought:</string>
    <string name="edit_fund">Edit Fund</string>
    <string name="edit_share">Edit Share</string>
    <string name="no_funds">There are no funds to show</string>
    <string name="no_shares">There are no shares to show</string>
    <string name="action_add_share">Add Share</string>
    <string name="title_activity_tax_details">TaxDetailsActivity</string>
    <string name="edit_tax_name">Tax</string>
    <string name="edit_tax_value">Tax Value</string>
    <string name="edit_tax_company">Tax provider / Company</string>
    <string name="text_tax_date_issue">Date of issue:</string>
    <string name="text_tax_date_due">Date due:</string>
    <string name="edit_tax_invoice_number">Tax Invoice Number:</string>
    <string name="label_tax_company">Tax  provider / Company:</string>
    <string name="label_tax_date_issue">Date of issue:</string>
    <string name="label_tax_date_due">Date due:</string>
    <string name="label_tax_invoice_number">Tax. Inv. Number:</string>
    <string name="edit_tax">Edit Tax</string>
    <string name="title_activity_tax_list">TaxListActivity</string>
    <string name="no_taxes">There are no taxes to show</string>
    <string name="action_add_tax">Add Tax</string>
    <string name="label_tax_issued">Issued:</string>
    <string name="label_due">Due:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="value_given_curr">The value is in currency choosen above.</string>
    <string name="add">+</string>
    <string name="sub">-</string>

</resources>
