<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.invoice.AddEditInvoiceActivity"
    tools:showIn="@layout/activity_add_invoice"
    >

    <EditText
        android:id="@+id/edit_invoice_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_invoice_name"
        />

    <EditText
        android:id="@+id/edit_invoice_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_invoice_name"
        android:hint="@string/edit_invoice_number"
        />

    <EditText
        android:id="@+id/edit_invoice_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_invoice_number"
        android:hint="@string/edit_invoice_bank"
        />

    <EditText
        android:id="@+id/edit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_invoice_bank"
        android:hint="@string/edit_card_number"
        android:inputType="number"
        android:maxLength="16"
        />

    <Spinner
        android:id="@+id/spinner_card_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_expiry"
        android:weightSum="2"
        android:layout_below="@id/edit_card_number"
        android:orientation="horizontal"
        >

        <Spinner
            android:id="@+id/spinner_month_expiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/edit_year_expiry"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_invoice_name"
            android:hint="@string/expiry_year"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="4"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_balance_curerncy"
        android:weightSum="5"
        android:layout_below="@id/linear_expiry"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/edit_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_expiry"
            android:layout_weight="3"
            android:hint="@string/edit_balance"
            android:inputType="numberDecimal"
            />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />

    </LinearLayout>

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttn_save_invoice"
        android:text="@string/button_save"
        android:textSize="20dp"
        android:layout_below="@id/linear_balance_curerncy"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        />


</RelativeLayout>
