<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mat.financialmanager.activity.share.ShareDetailsActivity"
    tools:showIn="@layout/activity_share_details">


    <!--Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/label_share_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_share_name"
        android:layout_toRightOf="@id/label_share_name"
        android:hint="Share Name"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:gravity="end"
        />

    <!--Value-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_value"
        android:id="@+id/label_share_value"
        android:layout_below="@+id/label_share_name"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_share_name"
        android:layout_toRightOf="@+id/label_share_value"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:id="@+id/linear_value_currency"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_share_value"
            android:hint="Value"
            android:textAlignment="textEnd"
            android:layout_alignParentRight="true"
            android:gravity="end"
            />

        <!--Currency-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_share_currency"
            android:singleLine="true"
            android:hint="USD"
            android:layout_marginLeft="3dp" />

    </LinearLayout>


    <!--Value per share-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_per_share_value"
        android:id="@+id/label_per_share_value"
        android:layout_below="@+id/label_share_value"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_per_share_value"
        android:layout_below="@id/linear_value_currency"
        android:layout_toRightOf="@+id/label_per_share_value"
        android:hint="Value per Share"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:gravity="end"
        />

    <!--Quantity-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_share_quantity"
        android:id="@+id/label_share_quantity"
        android:layout_below="@+id/label_per_share_value"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_share_quantity"
        android:layout_below="@id/text_per_share_value"
        android:layout_toRightOf="@+id/label_share_quantity"
        android:hint="Quantity"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:gravity="end"
        />

    <!--Company-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_share_company"
        android:id="@+id/label_share_company"
        android:layout_below="@+id/label_share_quantity"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_share_company"
        android:layout_below="@id/text_share_quantity"
        android:layout_toRightOf="@+id/label_share_company"
        android:hint="Company"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:gravity="end"
        />

    <!--Date bought-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_share_date_bought"
        android:id="@+id/label_share_date_bought"
        android:layout_below="@id/label_share_company"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_share_date_bought"
        android:layout_below="@id/label_share_company"
        android:layout_toRightOf="@+id/label_share_date_bought"
        android:hint="Date Bought"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:gravity="end"
        />



</RelativeLayout>
